--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -76,7 +76,7 @@
         </div>
       <% end %>
     </div>
-    <div class="share_block entertainment">Делись с друзьями</div>
+    <div class="share_block">Делись с друзьями</div>
   </div>
   <div class="sidebar"><%= render 'shared/sidebar'%></div>
   <div class="clear"></div>
