--- a/app/views/home/_activities.html.erb
+++ b/app/views/home/_activities.html.erb
@@ -20,6 +20,22 @@
   </div>
   <div class="socialnet">
 
+    <div class="soc_widget_tab">
+      В соцсетях <a href="#" class="fb_ico active" rel="show_widget_fb"><span>Фейсбук</span></a> <a href="#" class="vk_ico" rel="show_widget_vk"><span>Вконтакте</span></a>
+    </div>
+    <div class="soc_widget" id="show_widget_vk">
+    <script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
+    
+    <!-- VK Widget -->
+    <div id="vk_groups"></div>
+    <script type="text/javascript">
+    VK.Widgets.Group("vk_groups", {mode: 0, width: "", height: "290"}, 39665521);
+    </script>
+    </div>
+    <div class="soc_widget" id="show_widget_fb">
+    <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Ffestivalyarkieludi&amp;width=100%&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=true&amp;appId=359292310775946" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:290px;" allowTransparency="true"></iframe>
+    </div>
+
   </div>
   <div class="clear"></div>
 </div>
