--- a/app/views/home/_bright_magazine.html.erb
+++ b/app/views/home/_bright_magazine.html.erb
@@ -17,7 +17,7 @@
       <% Article.for_main.each do |article| %>
 	<div class="preview_cell">
 	  <div class="info">
-	    <div class="cat_name"><span>Статьи</span></div>
+	    <div class="cat_name"><span><%= article.category.title %></span></div>
 	    <div class="thumb"><%= link_to image_tag(article.picture.url), article_path(article) %></div>
 	    <div class="name"><%= link_to article.title, article_path(article) %></div>
 	    <div class="date"><%= article.created_at.to_s(:main) %></div>
@@ -33,7 +33,7 @@
 	  <% category.articles.for_main.each do |article| %>
 	    <div class="preview_cell">
 	      <div class="info">
-		<div class="cat_name"><span>asdsad</span></div>
+		<div class="cat_name"><span><%= article.category.title %></span></div>
 		<div class="thumb"><%= link_to image_tag(article.picture.url), article_path(article) %></div>
 		<div class="name"><%= link_to article.title, article_path(article) %></div>
 		<div class="date"><%= article.created_at.to_s(:main) %></div>
