fix article biography ==

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
       <div class="other_link">
 	<% if @article.biography.present? %>
 	  <div class="title">Биография</div>
-          <%= @article.biography %>
+          <%== @article.biography %>
 	<% end %>
 
         <div class="title">Другие статьи автора</div>
