--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,7 +26,7 @@
       <% if article = category.articles.sample %>
       <div class="personality_preview">
         <div class="personality_wrapper">
-          <%= link_to category.title, '#', class: "cat" %>
+          <%= link_to category.title, '#', class: "cat", 'data-id' => category.id %>
           <div class="thumb">
             <span class="mask"></span>
             <%= link_to image_tag(article.picture.url), article %>
@@ -49,14 +49,19 @@
         <div class="rubric_list">
           <ul>
             <% @categories.each do |category| %>
-              <li><%= link_to category.title, '#' %></li>
+              <li><%= link_to category.title, '#', 'data-id' => category.id %></li>
             <% end %>
           </ul>
         </div>
       </div>
     </div>
     <div class="journal_post">
-      <%= render 'articles_list', articles: @articles, remote: false %>
+      <% if @best_articles.any? %>
+        <div class="title"><span>Лучшее</span></div>
+        <%= render 'items', articles: @best_articles %>
+      <% end %>
+      <div class="title"><span><%= @news_category.title %></span></div>
+      <%= render 'items', articles: @news_category.articles.first(2) %>
     </div>
   </div>
 
