fix po vsemu saytu

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -40,6 +40,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .header_wrapper { margin:auto; position:relative; min-width:960px; padding:25px 0px 15px 0px}
 
 #header .header_flash_wrapper  { background:url(/assets/header_cap.jpg) no-repeat center top; height:204px;}
+#header .header_flash_wrapper a { display:block; height:204px}
 
 #main_page .color_line_left { background:url(/assets/color_line.jpg) repeat-y left 100px}
 #main_page .color_line_right { background:url(/assets/color_line.jpg) repeat-y right}
@@ -63,7 +64,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 
 
-#login_block { position:absolute; right:50px; top:36px; z-index:120; width:101px}
+#login_block { position:absolute; right:50px; top:36px; z-index:120; width:101px; white-space:nowrap;}
 #login_block .login_button { padding:18px 15px 0 15px;  dislay:block; background:#fff;}
 #login_block .login_button.active { padding:18px 15px; -moz-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
         -webkit-box-shadow:0px -3px 6px rgba(0,0,0,0.5);
@@ -160,7 +161,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 .main_content .adv { float:right; margin-left:3%}
 
-.main_content .bank_info .to_bank_link { margin-top:13px; background:#fff; border:3px solid #d21a18; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; behavior: url(border-radius.htc); text-decoration:none; font-weight:bold; color:#d21a18; padding:1px 5px; display:inline-block}
+.main_content .bank_info .to_bank_link { margin-top:23px; background:#fff; border:3px solid #d21a18; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; behavior: url(border-radius.htc); text-decoration:none; font-weight:bold; color:#d21a18; padding:1px 5px; display:inline-block}
 
 
 .main_content .subscription { behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; background:#ebebeb; padding:20px; margin-right:250px; margin-top:-79px; height: 40px;}
@@ -256,7 +257,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .council .trustee .title { font-family:Futura; border-bottom:1px solid #c69141; color:#7a5113; text-align:center; letter-spacing:-1px}
 
 
-.socialnet { margin-left:780px}
+.socialnet { margin-left:780px;overflow:hidden}
 .socialnet .soc_widget_tab { border-bottom:2px solid #dcdcdc; }
 .socialnet .soc_widget_tab .fb_ico { background:url(/assets/fb_tab.png) no-repeat left center; padding-left:16px; text-decoration:none; color:#5a7ea5; font-weight:bold; margin-left:5px;}
 .socialnet .soc_widget_tab .vk_ico { background:url(/assets/vk_tab.png) no-repeat left center; padding-left:26px; text-decoration:none; color:#5a7ea5; font-weight:bold; margin-left:5px;}
@@ -264,8 +265,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .socialnet .soc_widget_tab a span { display:inline-block; padding-bottom:8px;  margin-bottom:-2px}
 .socialnet .soc_widget_tab a.active span { background:url(/assets/social_tab_arrow.jpg) no-repeat center bottom;}
 
-.socialnet .soc_widget { display:none; padding:10px 0px}
-.socialnet #show_widget_fb { display:block}
+.socialnet .soc_widget {  padding:10px 0px; height:290px; background:#fff; }
 
 #vk_groups, #vk_groups iframe { width: 100% !important; }
 
@@ -279,10 +279,10 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .workshop_list .filter_sorter { -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; border:1px solid #dbdbdb; }
 
 .workshop_list .filter_wraper  { padding:16px 0px;}
-.workshop_list .filter_wraper .cell { float:left; padding:0px 20px; border-right:1px solid #dbdbdb; height:235px; position:relative }
+.workshop_list .filter_wraper .cell { float:left; padding:0px 20px; border-right:1px solid #dbdbdb; height:260px; position:relative }
 .workshop_list .sorter_wraper { border-top:1px solid #dbdbdb; } 
 .workshop_list .sorter_wraper .cell { float:left; padding:10px 20px; border-right:1px solid #dbdbdb; }
-.workshop_list .filter_wraper ul { float:left; width:140px }
+.workshop_list .filter_wraper ul { float:left; }
 
 .entertainment_list .sidebar { float:left; width:280px}
 .entertainment_list .filter_wraper { behavior: url(border-radius.htc); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; border:1px solid #dbdbdb; padding:16px;}
@@ -318,7 +318,7 @@ span.sim_check.active { background-position:0px 0px; }
 .entertainment_list .filter_wraper .clear_block { border:none; padding:0}
 .filter_wraper .clear_block a { -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; padding:5px 20px 5px 25px; color:#fff; font-weight:bold; text-decoration:none; display:inline-block; background:#0aaceb url(/assets/close_white.png) no-repeat 7px 9px;}
 
-.selected_metro, .selected_region { max-width:280px}
+.selected_metro, .selected_region { max-width:160px}
 .selected_metro .clear_link, .selected_region .clear_link {margin-right:10px;}
 
 
@@ -368,7 +368,7 @@ span.sim_check.active { background-position:0px 0px; }
 /* DETAIL */
 .detail_page .approved_mark { behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; border:2px solid #fcbe42; padding:10px 40px 6px 23px; font-size:15px; color:#d4140a; font-family:Futura; display:inline-block}
 .detail_page .approved_mark img { float:left; margin-top:-36px;}
-.detail_page .info_block { padding-top:10px;}
+.detail_page .info_block { padding-top:10px; width: 250px; overflow:hidden}
 .detail_page .base { font-weight:bold;}
 .detail_page .cat_list { padding-bottom:20px;}
 .detail_page .info_block th { text-align:left; padding-right:10px; background:url(/assets/punktir_info.jpg) repeat-x 0px 15px;}
@@ -502,10 +502,14 @@ span.sim_check.active { background-position:0px 0px; }
 .post_category_menu li.profile_ico a { background:#dadce1 url(/assets/profile_icon_user.png) no-repeat 5px -25px; padding-left:30px}
 .post_category_menu li.comment_ico a { background:#dadce1 url(/assets/profile_icon_comment.png) no-repeat 5px -25px; padding-left:30px}
 .post_category_menu li.fav_ico a { background:#dadce1 url(/assets/profile_icon_fav.png) no-repeat 5px -25px; padding-left:30px}
+.post_category_menu li.org_ico a { background:#dadce1 url(/assets/category_menu_org_ico.png) no-repeat 5px -27px; padding-left:30px}
+.post_category_menu li.about_ico a { background:#dadce1 url(/assets/category_menu_about_ico.png) no-repeat 5px -27px; padding-left:30px}
 
 .post_category_menu li.profile_ico.active a { background:#fff url(/assets/profile_icon_user.png) no-repeat 5px 7px; }
 .post_category_menu li.comment_ico.active a { background:#fff url(/assets/profile_icon_comment.png) no-repeat 5px 7px; }
 .post_category_menu li.fav_ico.active a { background:#fff url(/assets/profile_icon_fav.png) no-repeat 5px 7px; }
+.post_category_menu li.org_ico.active a { background:#fff url(/assets/category_menu_org_ico.png) no-repeat 5px 7px; padding-left:30px}
+.post_category_menu li.about_ico.active a { background:#fff url(/assets/category_menu_about_ico.png) no-repeat 5px 7px; padding-left:30px}
 
 .post_category_menu li span.count { background:#f3452e; color:#fff; font-size:14px; display:inline-block; height:20px; width:20px; text-align:center; margin-top:3px; line-height:20px; -moz-border-radius:4px; border-radius:4px; -webkit-border-radius:4px; -khtml-border-radius:4px;}
 
@@ -662,8 +666,8 @@ span.sim_check.active { background-position:0px 0px; }
 .expert_title h1 { font-size:24px;}
 
 .expert_nav { min-width:960px; margin:auto; max-width:1100px; position:relative}
-.expert_nav .prev_exp { float:left; width:140px; background:url(/assets/expert_nav_prev.png) no-repeat left center; padding-left:24px}
-.expert_nav .next_exp { float:right; width:140px; background:url(/assets/expert_nav_next.png) no-repeat right center; padding-right:24px}
+.expert_nav .prev_exp { position:absolute; left:0px; width:140px; background:url(/assets/expert_nav_prev.png) no-repeat left center; padding-left:24px}
+.expert_nav .next_exp { position:absolute; right:0px; width:140px; background:url(/assets/expert_nav_next.png) no-repeat right center; padding-right:24px}
 .expert_nav .exp_cell {}
 .expert_nav .exp_cell .thumb { float:left; width:56px; height:56px; behavior: url(border-radius.htc); -moz-border-radius:28px; border-radius:28px; -webkit-border-radius:28px; -khtml-border-radius:28px; overflow:hidden}
 .expert_nav .exp_cell .thumb img {  width:56px; height:56px; border-radius:28px;}
@@ -702,6 +706,28 @@ span.sim_check.active { background-position:0px 0px; }
 .expert_list .exp_preview .name { color:#007ba4; font-weight:bold; padding:2px 10px; text-align:center; display:block; line-height:1.3}
 .expert_list .exp_preview .name a { color:#007ba4; font-weight:bold; text-decoration:none}
 
+
+
+/* SEARCH RESULT */
+.search_title { text-align:center}
+.search_title span { color:#787878; font-size:16px; font-weight:bold}
+
+.search_filter { float:left; width:220px;}
+.search_filter .name { color:#787878; font-size:16px; font-weight:bold}
+.search_filter li { padding:4px;}
+.search_filter li a { display:inline-block; height:33px; padding:0px 10px; -moz-border-radius:4px 0px 0px 4px; border-radius:4px 0px 0px 4px; -webkit-border-radius:4px 0px 0px 4px; -khtml-border-radius:4px 0px 0px 4px; line-height:33px; text-decoration:none}
+
+.search_filter li a.active { display:inline-block; height:33px; padding:0px 10px; -moz-border-radius:4px 0px 0px 4px; border-radius:4px 0px 0px 4px; -webkit-border-radius:4px 0px 0px 4px; -khtml-border-radius:4px 0px 0px 4px; line-height:33px; background:#11a3e4; position:relative; color:#fff; font-weight:bold}
+.search_filter li a.active .mask { background:url(/assets/search_filter_arrow.png) no-repeat center top; width:16px; height:33px; display:block; position:absolute; right:-16px;}
+
+.search_list { margin-left:240px}
+
+.search_cell { padding:10px 0px; border-bottom:1px solid #ccc}
+.search_cell .name a { font-size:16px; color:#000000; font-weight:bold}
+.search_cell .short_desc { padding:4px 0px}
+.search_cell .info, .search_cell .info a{ color:#6c6c6c; font-size:11px;}
+.search_cell .info em { font-style:italic}
+.search_cell .match { font-weight:bold;}
 
 /*JOURNAL BRIGHT*/
 
