--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -2,7 +2,7 @@
   <%= hidden_field_tag :order_by, 'created_at', id: :order_by %>
   <div class="filter_sorter">
     <div class="filter_wraper">
-      <div class="cell">
+      <div class="cell" style="width:120px">
         <strong>По возрасту</strong>
         <ul>
           <% AgeTag.all.each do |age_tag| %>
@@ -14,7 +14,7 @@
           <% end %>
         </ul>
       </div>
-      <div class="cell">
+      <div class="cell" style="width:180px">
         <strong>По категории</strong>
         <ul>
           <% @directions.each do |tag| %>
