--- a/app/assets/stylesheets/council_slider.css
+++ b/app/assets/stylesheets/council_slider.css
@@ -34,9 +34,10 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
         width: 10%;
         float: left;
         text-align:center;
+        padding-bottom:10px
 }
 
-#slides article .info { width:140px; margin:auto; color:#795113; font-size:14px; text-align:center; padding-top:10px;}
+#slides article .info { width:140px; margin:auto; color:#795113; font-size:14px; text-align:center; padding-bottom:10px;}
 #slides article .info span { text-transform:uppercase}
 
 /* Slider Styling */
