--- a/app/views/home/_activities.html.erb
+++ b/app/views/home/_activities.html.erb
@@ -29,7 +29,7 @@
     <!-- VK Widget -->
     <div id="vk_groups"></div>
     <script type="text/javascript">
-    VK.Widgets.Group("vk_groups", {mode: 0, width: "", height: "290"}, 39665521);
+    VK.Widgets.Group("vk_groups", {mode: 0, width: "400", height: "290"}, 39665521);
     </script>
     </div>
     <div class="soc_widget" id="show_widget_fb">
