--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -48,7 +48,7 @@
               <div class="name"><%= link_to activity.title, activity %></div>
               Детям  <%= activity.age%> лет
               <br>
-              <div class="rating"></div>
+	      <div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
             </div>
           </div>
         <% end %>
