fix #BRI-90 /activity/:id

--- a/app/views/activities/_about_activity.html.erb
+++ b/app/views/activities/_about_activity.html.erb
@@ -62,4 +62,9 @@
     <a href="" class="next">Вперед</a>
     <a href="" class="prev">Назад</a>
   </div>
+<% else %>
+    <div class="title_block">Здесь работают</div>
+    <div id="ruk_slider">
+      <%== activity.replace_teacher_text %>
+    </div>
 <% end %>
