--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -54,7 +54,7 @@
 	    </tr>
 	    <tr>
 	      <th><span>Сайт</span></th>
-	      <td><a href=<%= @activity.site %> target="_blank" ><%= @activity.site %></td>
+	      <td ><div class="activ_site"><a href=<%= @activity.site %> target="_blank" ><span class="mask"></span><%= @activity.site %></a></div></td>
 	    </tr>
 	    <tr>
 	      <th><span>Телефон</span></th>
