fix /articles js error when click by articles name

--- a/app/views/articles/_expert_column.html.erb
+++ b/app/views/articles/_expert_column.html.erb
@@ -1,4 +1,5 @@
-<% if (article = category.articles.sample) %>
+<!-- TODO: :shit: -->
+<% if article = category ? category.articles.sample : false %>
   <% if (article.author.role.name == 'expert') %>
   <div class="personality_preview">
     <div class="personality_wrapper">
