--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -29,7 +29,7 @@
     <div class="profile_change_name">
       <div class="info_label">
         <strong>Смена имени</strong><br />
-        Вы можете поменять имя, правда фиг знает, зачем, но оно должно быть не длинне N символов
+        Вы можете поменять имя
       </div>
       <div class="field">
         <%= f.text_field :name %>
