--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -449,7 +449,7 @@ span.sim_check.active { background-position:0px 0px; }
 .comment .more_comment { padding-left:145px }
 .comment .more_comment a { background:url(/assets/more_button.png); width:208px; height:33px; color:#fff; text-align:center; display:block; font-size:14px; text-shadow:1px 1px #ccc; text-decoration:none; line-height:33px}
 
-.treeview { padding-bottom:10px}
+.treeview { padding-bottom:10px; border-top:3px solid #e5e5e5}
 .treeview .info .quote { background:none; padding-left:0}
 .treeview .info .name { padding-left:0;}
 
@@ -457,7 +457,7 @@ span.sim_check.active { background-position:0px 0px; }
 .treeview ul ul li { border-top:1px solid #e5e5e5;border-bottom:none}
 
 
-.add_comment { padding:20px 0px; margin-left:20px; border-top:3px solid #e5e5e5}
+.add_comment { padding:20px 0px; margin-left:20px; }
 .add_comment .button { margin-left:160px}
 .add_comment .button input { -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; padding:5px 25px 5px 25px; color:#fff; font-weight:bold; text-decoration:none; display:inline-block; background:#0aaceb; border:none; margin:0; font-size:16px; font-family:Arial, Helvetica, sans-serif; cursor:pointer}
 
@@ -539,15 +539,15 @@ span.sim_check.active { background-position:0px 0px; }
 .post_info .other_link { behavior: url(border-radius.htc); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; border:1px solid #dbdbdb; padding:10px; font-size:12px; margin-bottom:20px}
 .post_info .other_link li { padding:2px 0px}
 .post_info .other_link a { font-size:12px; background:url(/assets/other_link_ico.png) no-repeat 0px 1px; padding-left:16px;display:block}
-.post_info .other_link .title { font-size:16px; color:#007ba4; font-family:Futura;}
+.post_info .other_link .title { font-size:16px; color:#007ba4; font-family:Futura; padding:0}
 
 
 
 .post_share { background:#ffb13b; padding:10px; behavior: url(border-radius.htc); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; margin-bottom:20px;}
-.post_share .title { font-size:16px; color:#654515; font-family:Futura;}
+.post_share .title { font-size:16px; color:#654515; font-family:Futura; padding:0}
 
-
-
+.soc_like_button { float:left; margin-right:10px;}
+.soc_like_button div { vertical-align: top !important;}
 
 .preview_specialist { width:19%; margin-right:1%; float:left }
 .preview_specialist .info { width:160px; margin:auto; position:relative;}
@@ -740,8 +740,10 @@ span.sim_check.active { background-position:0px 0px; }
 .personality_slider  .person_slide_lenta { position:absolute; z-index:100; right:-5px; top:-5px}
 .personality_slider .slides_container { width:520px; height:320px;}
 .personality_slider .slides_container .slide { height:320px; width:520px; -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; display:block; position:relative; overflow:hidden}
-.personality_slider .slides_container .info { position:absolute; bottom:0; left:0; background:url(/assets/slider_control_bg.png); padding:5px 10px; width:500px; color:#e7e5e5; font-size:12px}
+.personality_slider .slides_container .info { position:absolute; bottom:0; left:0; background:url(/assets/slider_control_bg.png); padding:5px 50px 5px 10px; width:460px; color:#e7e5e5; font-size:12px}
 .personality_slider .slides_container .info .name { color:#fff; font-weight:bold }
+
+.personality_slider .slides_container .info .comment_count { text-align:center; color:#fff; font-weight:bold; line-height:22px; position:absolute; right:10px; top:24px; width:34px; height:30px; background:url(/assets/comment_count.png) no-repeat;}
 
 .personality_slider .prev, .personality_slider .next { display:block; position:absolute; z-index:15; top:120px}
 .personality_slider .prev { left:10px}
@@ -761,6 +763,7 @@ span.sim_check.active { background-position:0px 0px; }
 .personality_preview .thumb { position:relative; float:left; width:120px; height:120px; overflow:hidden; margin-left:20px}
 .personality_preview .thumb .mask { width:120px; height:120px; background:url(/assets/rukov_mask.png) no-repeat center center; display:block; position:absolute}
 .personality_preview .name { font-weight:bold; color:#007ba4; font-size:15px; display:block; }
+.personality_preview .name a { font-weight:bold; color:#007ba4; font-size:15px; text-decoration:none }
 .personality_preview .info { color:#544d4d;display:block; }
 .personality_preview .date { color:#74746f; font-size:12px; display:block; font-weight:bold; }
 
