--- a/app/views/articles/_persons.html.erb
+++ b/app/views/articles/_persons.html.erb
@@ -6,7 +6,7 @@
         <div class="info">
           <div class="name"><%= article.title %></div>
           <%= article.short_description %>
-          <div><%= article.comments.count %></div>
+          <div class="comment_count"><%= article.comments.count %></div>
         </div>
       </div>
     <% end %>
